--- a/app/src/main/res/drawable/round_back_green_button.xml
+++ b/app/src/main/res/drawable/round_back_green_button.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#343239"/>
+    <solid android:color="#15781B"/>
     <corners android:radius="20dp"/>
 </shape>
