--- a/app/src/main/res/drawable/thumbfalse.xml
+++ b/app/src/main/res/drawable/thumbfalse.xml
@@ -1,4 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape
+            android:shape="oval">
+            <solid
+                android:color="@color/white"/>
+            <size
+                android:height="8dp"
+                android:width="8dp"/>
+            <stroke
+                android:width="1dp"
+                android:color="#9C27B0"/>
+        </shape>
+    </item>
+    <item
+        android:drawable="@drawable/ic_sun"
+        android:top="8dp"
+        android:left="8dp"
+        android:right="8dp"
+        android:bottom="8dp"/>
+</layer-list>
