--- a/app/src/main/res/layout/activity_data_complete.xml
+++ b/app/src/main/res/layout/activity_data_complete.xml
@@ -1,6 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".logger.DataCompleteActivity">
 
+    <TextView
+        android:id="@+id/conectarse_con"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="24dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:lineSpacingExtra="4sp"
+        android:text="Termina de completar tus datos para tener un registro exitoso"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/ediTxtNombreData"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/background_container"
+        android:ems="10"
+        android:hint="Nombre completo"
+        android:inputType="textEmailAddress"
+        android:paddingLeft="45dp"
+        android:paddingRight="8dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/conectarse_con" />
+    <View
+        android:id="@+id/view_linea3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/ic_linea_gris_de_datos"
+        app:layout_constraintBottom_toBottomOf="@+id/ediTxtNombreData"
+        app:layout_constraintEnd_toEndOf="@+id/ediTxtNombreData"
+        app:layout_constraintStart_toStartOf="@+id/ediTxtNombreData" />
+
+
+    <ImageView
+        android:id="@+id/usuario"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:alpha=".9"
+        android:padding="5dp"
+        android:src="@drawable/ic_icono_de_usuario"
+        app:layout_constraintBottom_toBottomOf="@+id/ediTxtNombreData"
+        app:layout_constraintStart_toStartOf="@+id/ediTxtNombreData"
+        app:layout_constraintTop_toTopOf="@+id/ediTxtNombreData" />
+
+    <View
+        android:id="@+id/btn_registrarse"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/btndesha"
+        android:onClick="agregaUsuario"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Siguiente"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_registrarse"
+        app:layout_constraintEnd_toEndOf="@+id/btn_registrarse"
+        app:layout_constraintStart_toStartOf="@+id/btn_registrarse"
+        app:layout_constraintTop_toTopOf="@+id/btn_registrarse" />
 </androidx.constraintlayout.widget.ConstraintLayout>
