--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,15 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="buttonTeams">
+        <item name="android:background">@drawable/round_back_nightmode10_20</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="ScreenBackground"><item name="android:background">#050508</item></style>
+    <style name="CardBackground"><item name="android:background">@drawable/round_back_low_nightmode10_20</item></style>
+    <style name="CardBackgroundBlack"><item name="android:background">@drawable/round_back_nightmode10_20</item></style>
+    <style name="TextColor"><item name="android:textColor">#2D9434</item></style>
+    <style name="ImageChange"><item name="android:src">@drawable/ic_icono_de_google</item></style>
+
 </resources>
