--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.EstadisticasTorneo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/greenlight</item>
+        <item name="colorPrimaryVariant">@color/greenlight</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -22,4 +22,11 @@
     <style name="Theme.EstadisticasTorneo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.EstadisticasTorneo.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="BackgroundFont"><item name="android:background">#4CAF50</item></style>
+    <style name="ScreenBackground"><item name="android:background">#15781B</item></style>
+    <style name="CardBackground"><item name="android:background">@drawable/round_back_white10_20</item></style>
+    <style name="TextColor"><item name="android:textColor">@color/white</item></style>
+    <style name="ImageChange"><item name="android:src">@drawable/ic_icono_de_google</item></style>
+    <style name="DividerGoogle"><item name="android:background">#FFFFFF</item></style>
 </resources>
