--- a/app/src/main/res/drawable/ic_arroba.xml
+++ b/app/src/main/res/drawable/ic_arroba.xml
@@ -6,6 +6,6 @@
     <path
         android:pathData="M48.19,59.43C44.47,62 38.6,64.09 29.61,64.09 12.4,64.09 0,52.3 0,33.65 0,14.46 12.88,0 33,0 48.52,0 61.5,9.38 61.5,26.54c0,13.64 -7.11,22 -16.9,22 -4.36,0 -7.44,-1.74 -7.64,-5.91 -2.54,3.75 -5.64,5.88 -10.8,5.88 -6.14,0 -10.8,-4.41 -10.8,-13.27 0,-11.52 6.93,-20.48 15.71,-20.48 6,0 8.34,3.29 9,5.87l1.28,-5.11h6L42.8,36.92c-1.06,4.92 0.26,6.42 3,6.42 5.77,0 9.95,-6.53 9.95,-16.5 0,-13.31 -9.23,-21.74 -23,-21.74C16.51,5.1 6.08,16.65 6,33.68c0,14.23 9.26,25.08 23.89,25.08 6.27,0 11.91,-1.13 16.81,-4ZM21.87,34.92c0,5.46 2.14,8.37 5.9,8.37 4.58,0 8,-3.06 9.85,-11.38 1.81,-8 -0.24,-12 -5.87,-12C25.53,19.9 21.87,27.22 21.87,34.92Z"
         android:strokeAlpha="0.75"
-        android:fillColor="#706f6a"
-        android:fillAlpha="0.75"/>
+        android:fillColor="#FFFFFF"
+        android:fillAlpha="1"/>
 </vector>
