--- a/app/src/main/res/drawable/ic_botones_de_icono_g_y_fb.xml
+++ b/app/src/main/res/drawable/ic_botones_de_icono_g_y_fb.xml
@@ -6,6 +6,6 @@
     <path
         android:pathData="M34.54,1L316.46,1A33.54,33.54 0,0 1,350 34.54L350,122.46A33.54,33.54 0,0 1,316.46 156L34.54,156A33.54,33.54 0,0 1,1 122.46L1,34.54A33.54,33.54 0,0 1,34.54 1z"
         android:strokeWidth="2"
-        android:fillColor="#00000000"
-        android:strokeColor="#d6d0d0"/>
+        android:fillColor="#FFFFFF"
+        android:strokeColor="#FFFFFF"/>
 </vector>
