--- a/app/src/main/res/drawable/ic_icono_de_ojo_abierto.xml
+++ b/app/src/main/res/drawable/ic_icono_de_ojo_abierto.xml
@@ -5,16 +5,16 @@
     android:viewportHeight="53.5">
     <path
         android:pathData="M2.89,26.75a42.05,24.25 0,1 0,84.1 0a42.05,24.25 0,1 0,-84.1 0z"
-        android:strokeAlpha="0.75"
+        android:strokeAlpha="1"
         android:strokeWidth="5"
         android:fillColor="#00000000"
-        android:strokeColor="#706f6a"
-        android:fillAlpha="0.75"/>
+        android:strokeColor="#FFFFFF"
+        android:fillAlpha="1"/>
     <path
         android:pathData="M44.86,26.75m-15.79,0a15.79,15.79 0,1 1,31.58 0a15.79,15.79 0,1 1,-31.58 0"
-        android:strokeAlpha="0.75"
+        android:strokeAlpha="1"
         android:strokeWidth="5"
         android:fillColor="#00000000"
-        android:strokeColor="#706f6a"
-        android:fillAlpha="0.75"/>
+        android:strokeColor="#FFFFFF"
+        android:fillAlpha="1"/>
 </vector>
