--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,6 +24,7 @@
     <style name="Theme.EstadisticasTorneo.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="BackgroundFont"><item name="android:background">#4CAF50</item></style>
+    <style name="ColorButton"><item name="android:backgroundTint">#15781B</item></style>
     <style name="ScreenBackground"><item name="android:background">#15781B</item></style>
     <style name="CardBackground"><item name="android:background">@drawable/round_back_white10_20</item></style>
     <style name="TextColor"><item name="android:textColor">@color/white</item></style>
