--- a/app/src/main/res/drawable/btndesha.xml
+++ b/app/src/main/res/drawable/btndesha.xml
@@ -1,9 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="296dp"
-    android:height="48dp"
-    android:viewportWidth="296"
-    android:viewportHeight="48">
-    <path
-        android:pathData="M12,0L284,0A12,12 0,0 1,296 12L296,36A12,12 0,0 1,284 48L12,48A12,12 0,0 1,0 36L0,12A12,12 0,0 1,12 0z"
-        android:fillColor="#78ff9b"/>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+android:shape="rectangle">
+
+<solid android:color="#15781B"/>
+<corners android:radius="5dp"/>
+</shape>
