--- a/app/src/main/res/drawable/ic_icono_de_ojo_abierto.xml
+++ b/app/src/main/res/drawable/ic_icono_de_ojo_abierto.xml
@@ -8,13 +8,13 @@
         android:strokeAlpha="1"
         android:strokeWidth="5"
         android:fillColor="#00000000"
-        android:strokeColor="#FFFFFF"
+        android:strokeColor="#9E9E9E"
         android:fillAlpha="1"/>
     <path
         android:pathData="M44.86,26.75m-15.79,0a15.79,15.79 0,1 1,31.58 0a15.79,15.79 0,1 1,-31.58 0"
         android:strokeAlpha="1"
         android:strokeWidth="5"
         android:fillColor="#00000000"
-        android:strokeColor="#FFFFFF"
+        android:strokeColor="#9E9E9E"
         android:fillAlpha="1"/>
 </vector>
