--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,267 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/BackgroundFont"
+    tools:context=".logger.LoginActivity"
+    android:background="@drawable/background_fondo"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".logger.Login">
-
-        <TextView
-            android:id="@+id/no_tengo_un"
-            android:layout_width="0dp"
-            android:layout_height="23dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="98dp"
-            android:layout_marginBottom="8dp"
-            android:gravity="center_horizontal|center_vertical"
-            android:lineSpacingExtra="8sp"
-            android:text="¿No tienes una cuenta?"
-            android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textView5" />
-
-        <TextView
-            android:id="@+id/no_tengo_un2"
-            android:layout_width="0dp"
-            android:layout_height="23dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="4dp"
-            android:gravity="center_horizontal|center_vertical"
-            android:lineSpacingExtra="8sp"
-            android:onClick="registrarse"
-            android:text="Registrate"
-            android:textColor="#000000"
-            app:layout_constraintBottom_toBottomOf="@+id/no_tengo_un"
-            app:layout_constraintStart_toEndOf="@+id/no_tengo_un"
-            app:layout_constraintTop_toTopOf="@+id/no_tengo_un"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="212dp"
-            android:layout_height="19dp"
-            android:layout_marginTop="80dp"
-            android:text=""
-            app:layout_constraintBottom_toTopOf="@+id/no_tengo_un"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/signGoogle" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="200dp"
-            android:layout_height="44dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="60dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_letras_iniciar_sesion" />
-
-        <EditText
-            android:id="@+id/ediTxtCorreo"
-            style="@style/BackgroundFont"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="32dp"
-            android:ems="10"
-            android:hint="Correo eléctronico"
-            android:inputType="textEmailAddress"
-            android:paddingLeft="45dp"
-            android:paddingRight="8dp"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.532"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/imageViewClickBackLogin"
+                    android:layout_marginTop="25dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="15dp"
+                    app:srcCompat="@drawable/ic_arrow_back"/>
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="200dp"
+                    android:layout_height="44dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginStart="16dp"
+                    app:srcCompat="@drawable/ic_letras_iniciar_sesion" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:orientation="vertical"
+                    android:padding="13dp"
+                    android:background="@drawable/round_back_white10_20">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <EditText
+                            android:id="@+id/ediTxtCorreo"
+                            android:background="@drawable/round_back_low_nightmode10_20"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:hint="Correo eléctronico"
+                            android:inputType="textEmailAddress"
+                            android:drawableLeft="@drawable/ic_logo_email"
+                            android:textColor="#FFFFFF"
+                            android:paddingLeft="15dp"
+                            android:layout_marginTop="10dp"
+                            android:drawablePadding="15dp"
+                            android:textColorHint="#FFFFFF"/>
+                    </RelativeLayout>
+                    <RelativeLayout
+                        android:layout_marginTop="15dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <EditText
+                            android:background="@drawable/round_back_low_nightmode10_20"
+                            android:id="@+id/ediTxtPass"
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:hint="Contraseña"
+                            android:drawableLeft="@drawable/ic_candado_grey"
+                            android:paddingLeft="15dp"
 
-        <ImageView
-            android:id="@+id/correo"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:alpha=".9"
-            android:padding="5dp"
-            android:src="@drawable/ic_arroba"
-            app:layout_constraintBottom_toBottomOf="@+id/ediTxtCorreo"
-            app:layout_constraintStart_toStartOf="@+id/ediTxtCorreo"
-            app:layout_constraintTop_toTopOf="@+id/ediTxtCorreo" />
+                            android:drawablePadding="15dp"
+                            android:inputType="textPassword"
+                            android:textColor="#FFFFFF"
+                            android:textColorHint="#FFFFFF"/>
+                    </RelativeLayout>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <Button
+                            android:onClick="toMain"
+                            android:id="@+id/log_in"
+                            android:layout_marginTop="30dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Iniciar Sección"
+                            android:textColor="@color/white"
+                            android:background="@drawable/button_colors_green"/>
+                    </RelativeLayout>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/olvide_mi_c"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Olvidastes la contraseña?"
+                            android:textColor="#15781B"
+                            android:onClick="toRecoveryPass"
+                            android:layout_centerHorizontal="true"
+                            android:layout_alignParentRight="true"/>
+                    </RelativeLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:orientation="vertical"
+                    android:padding="13dp">
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/view4"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_marginStart="70dp"
-            android:layout_marginEnd="33dp"
-            style="@style/DividerGoogle"
-            app:layout_constraintTop_toBottomOf="@+id/ediTxtCorreo"
-            app:layout_constraintEnd_toEndOf="@+id/ediTxtCorreo"
-            app:layout_constraintStart_toStartOf="@+id/ediTxtCorreo" />
+                        <ImageView
+                            android:id="@+id/signGoogle"
+                            android:layout_width="180dp"
+                            android:layout_height="60dp"
+                            android:onClick="signIn"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:srcCompat="@drawable/ic_botones_de_icono_g_y_fb" />
+                        <ImageView
+                            android:id="@+id/imageView5"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            app:layout_constraintBottom_toBottomOf="@+id/signGoogle"
+                            app:layout_constraintEnd_toEndOf="@+id/signGoogle"
+                            app:layout_constraintStart_toStartOf="@+id/signGoogle"
+                            app:layout_constraintTop_toTopOf="@+id/signGoogle"
+                            app:srcCompat="@drawable/ic_icono_de_google" />
 
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/line4"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_marginStart="70dp"
-            android:layout_marginEnd="33dp"
-            style="@style/DividerGoogle"
-            app:layout_constraintTop_toBottomOf="@+id/ediTxtPass"
-            app:layout_constraintEnd_toEndOf="@+id/ediTxtPass"
-            app:layout_constraintStart_toStartOf="@+id/ediTxtPass" />
-
-        <EditText
-            style="@style/BackgroundFont"
-            android:id="@+id/ediTxtPass"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="32dp"
-            android:ems="10"
-            android:hint="Contraseña"
-            android:inputType="textPassword"
-            android:paddingLeft="45dp"
-            android:paddingRight="45dp"
-            android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view4" />
-
-        <ImageView
-            android:id="@+id/lock"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:alpha=".9"
-            android:padding="5dp"
-            android:src="@drawable/ic_candado"
-            app:layout_constraintBottom_toBottomOf="@+id/ediTxtPass"
-            app:layout_constraintStart_toStartOf="@+id/ediTxtPass"
-            app:layout_constraintTop_toTopOf="@+id/ediTxtPass" />
-
-        <ImageView
-            android:id="@+id/eye"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:alpha=".9"
-            android:onClick="showHidePassword"
-            android:padding="5dp"
-            android:src="@drawable/ic_icono_de_ojo_abierto"
-            app:layout_constraintBottom_toBottomOf="@+id/ediTxtPass"
-            app:layout_constraintEnd_toEndOf="@+id/ediTxtPass"
-            app:layout_constraintTop_toTopOf="@+id/ediTxtPass" />
-
-
-        <TextView
-            android:id="@+id/olvide_mi_c"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="16dp"
-            android:gravity="center_horizontal|center_vertical"
-            android:lineSpacingExtra="4sp"
-            android:onClick="toRecoveryPass"
-            android:text="¿Olvidaste tú contraseña?"
-            android:textColor="#FFFFFF"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@+id/ediTxtPass"
-            app:layout_constraintTop_toBottomOf="@+id/ediTxtPass" />
-
-        <TextView
-            android:id="@+id/olvide_mi_c2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="40dp"
-            android:gravity="center_horizontal|center_vertical"
-            android:lineSpacingExtra="4sp"
-            android:text="O conectarse con Google:"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/log_in" />
-
-        <View
-            android:id="@+id/log_in"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="70dp"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/btndesha"
-            android:onClick="toMain"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/olvide_mi_c" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Iniciar Sesión"
-            android:textColor="#FFFFFF"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="@+id/log_in"
-            app:layout_constraintEnd_toEndOf="@+id/log_in"
-            app:layout_constraintStart_toStartOf="@+id/log_in"
-            app:layout_constraintTop_toTopOf="@+id/log_in" />
-
-        <ImageView
-            android:id="@+id/signGoogle"
-            android:layout_width="140dp"
-            android:layout_height="57dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="24dp"
-            android:onClick="signIn"
-            app:layout_constraintEnd_toEndOf="@+id/log_in"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="@+id/log_in"
-            app:layout_constraintTop_toBottomOf="@+id/olvide_mi_c2"
-            app:srcCompat="@drawable/ic_botones_de_icono_g_y_fb" />
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            app:layout_constraintBottom_toBottomOf="@+id/signGoogle"
-            app:layout_constraintEnd_toEndOf="@+id/signGoogle"
-            app:layout_constraintStart_toStartOf="@+id/signGoogle"
-            app:layout_constraintTop_toTopOf="@+id/signGoogle"
-            app:srcCompat="@drawable/ic_icono_de_google" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-</ScrollView>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
